apps/ubys-student-portal/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubys-student-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
    - host: ubys-student-portal.test.ubys.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubys-student-portal
                port:
                  number: 80
